; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-nix.c_log_kernel_version.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-nix.c_log_kernel_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utsname = type { i32, i32 }

@LOG_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Kernel Version: %s %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @log_kernel_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @log_kernel_version() #0 {
  %1 = alloca %struct.utsname, align 4
  %2 = call i64 @uname(%struct.utsname* %1)
  %3 = icmp slt i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %12

5:                                                ; preds = %0
  %6 = load i32, i32* @LOG_INFO, align 4
  %7 = getelementptr inbounds %struct.utsname, %struct.utsname* %1, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = getelementptr inbounds %struct.utsname, %struct.utsname* %1, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @blog(i32 %6, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %8, i32 %10)
  br label %12

12:                                               ; preds = %5, %4
  ret void
}

declare dso_local i64 @uname(%struct.utsname*) #1

declare dso_local i32 @blog(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
